--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -11,7 +11,7 @@
         display: block;
         padding: 8px 0;
 
-        .img {
+        img {
             display: block;
             margin: 8px auto;
             width: 24px;
