--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -25,12 +25,12 @@
             position: absolute;
             margin-top: -40px;
             left: -15px;
-            opacity: 0.6s;
+            opacity: 0.6;
         }
 
         &:after {
             content: '<h1/>';
-            font-family: 'La Belle Aurore';
+            font-family: 'La Belle Aurore', cursive;
             color: #ffd700;
             font-size: 18px;
             position: absolute;
