completed home section

--- a/src/components/AnimatedLetters/index.scss
+++ b/src/components/AnimatedLetters/index.scss
@@ -1,7 +1,7 @@
 .text-animate {
     display: inline-block;
     opacity: 0;
-    animation: bounceIn 1s;
+    animation: bounceIn;
     animation-duration: 1s;
     animation-delay: 1s;
     animation-fill-mode: forwards;
