added load animation

--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -72,6 +72,7 @@
 
             &::after {
                 content: '<h1/>';
+                opacity: 0.6;
                 font-family: 'La Belle Aurore';
                 font-size: 18px;
                 line-height: 18px;
