updated portfolio section

--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -82,6 +82,12 @@
             }
         }
 
+        a.portfolio-link {
+            &:after {
+                content: 'PORTFOLIO';
+            }
+        }
+
         a.contact-link {
             &:after {
                 content: 'CONTACT';
