--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -38,18 +38,9 @@
     animation-delay: 1s;
 }
 
-.about-page,
-.contact-page {
-    .text-zone {
-        position: absolute;
-        left: 10%;
-        top: 50%;
-        transform: translateY(-50%);
-        width: 35%;
-        vertical-align: middle;
-        display: table-cell;
-        max-height: 90%;
-
+.container.about-page,
+.container.portfolio-page,
+.container.contact-page {
         h1 {
             font-size: 53px;
             font-family: 'Coolvetica';
@@ -102,6 +93,15 @@
                 animation-delay: 1.3s;
             }
         }
+        .text-zone {
+            position: absolute;
+            left: 10%;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 35%;
+            vertical-align: middle;
+            display: table-cell;
+            max-height: 90%;
     }
 
     .text-animate-hover {
