--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -31,44 +31,60 @@
         box-shadow: 0 0 20px 0px lightyellow;
     }
 
-    .face1 {
-        transform: translateZ(100px);
+.face1 {
+    transform: translateZ(100px);
+    color: #dd0031;
     }
     .face2 {
-        transform: rotateY(90deg) translateZ(100px);
+    transform: rotateY(90deg) translateZ(100px);
+    color: #f06529;
     }
     .face3 {
-        transform: rotateY(90deg) rotateX(90deg) translateZ(100px);
+    transform: rotateY(90deg) rotateX(90deg) translateZ(100px);
+    color: #28a4d9;
     }
     .face4 {
-        transform: rotateY(180deg) rotateZ(90deg) translateZ(100px);
+    transform: rotateY(180deg) rotateZ(90deg) translateZ(100px);
+    color: #5ed4f4;
     }
     .face5 {
-        transform: rotateY(-90deg) rotateZ(90deg) translateZ(100px);
+    transform: rotateY(-90deg) rotateZ(90deg) translateZ(100px);
+    color: #efd81d;
     }
     .face6 {
-        transform: rotateX(-90deg) translateZ(100px);
+    transform: rotateX(-90deg) translateZ(100px);
+    color: #ec4d28;
     }
 }
 
 @keyframes spincube {
     from,
     to {
-        transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+    transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
     }
     16% {
-        transform: rotateY(-90deg);
+    transform: rotateY(-90deg) rotateZ(90deg);
     }
     33% {
-        transform: rotateY(-90deg) rotateZ(90deg);
+    transform: rotateY(-90deg) rotateX(90deg);
     }
     50% {
-        transform: rotateY(-180deg) rotateZ(90deg);
+    transform: rotateY(-180deg) rotateZ(90deg);
     }
     66% {
-        transform: rotateY(-270deg) rotateZ(90deg);
+    transform: rotateY(-270deg) rotateX(90deg);
     }
     83% {
-        transform: rotateX(90deg);
+    transform: rotateX(90deg);
+    }
+}
+
+
+@media screen and (max-width: 1200px) {
+    .stage-cube-cont {
+        position: initial;
+        width: 100%;
+        height: 0%;
+        overflow: visible;
     }
 }
