--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,9 @@ body {
   margin-top: 200px;
   margin-left: 200px;
 }
+
+@media screen and (max-width: 1200px) {
+  body {
+    overflow: visible;
+  }
+}
