khai code đầu năm ạ

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -10,7 +10,7 @@
     }
 
     h1 {
-        color: #fff;
+        color: #ED6165;
         font-size: 56px;
         line-height: 53px;
         margin: 0;
@@ -20,7 +20,7 @@
         &:before {
             content: '<h1>';
             font-family: 'La Belle Aurore', cursive;
-            color: #ffd700;
+            color: #ED6165;
             font-size: 18px;
             position: absolute;
             margin-top: -40px;
@@ -31,7 +31,7 @@
         &:after {
             content: '<h1/>';
             font-family: 'La Belle Aurore', cursive;
-            color: #ffd700;
+            color: #ED6165;
             font-size: 18px;
             position: absolute;
             margin-top: 18px;
@@ -61,21 +61,22 @@
     }
 
     .flat-button {
-        color: #ffd700;
+        color: #ED6165;
         font-size: 13px;
         font-weight: 400;
         letter-spacing: 4px;
         font-family: sans-serif;
         text-decoration: none;
         padding: 10px 18px;
-        border: 1px solid #ffd700;
+        border: 1px solid #ED6165;
         margin-top: 25px;
         float: left;
-        animation: fadeIn 1s 1.8s backwards;
+        // animation: fadeIn 0.1s 0.1s backwards;
         white-space: nowrap;
 
         &:hover {
-            background: #ffd700;
+            animation: rubberBand 1s;
+            background: #ED6165;
             color: #333;
         }
     }
