--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -10,7 +10,7 @@
 }
 
 .tags {
-    color: #ffd700;
+    color: #ED6165;
     opacity: 0.6;
     position: absolute;
     bottom: 0;
@@ -44,7 +44,7 @@
         h1 {
             font-size: 53px;
             font-family: 'Coolvetica';
-            color:#ffd700;
+            color:#ED6165;
             font-weight: 400;
             margin-top: 0;
             position: relative;
