--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   margin: 0;
   font: 300 11px/1.4 'Helvetica Neue', sans-serif;
   color: #444;
-  background: #022c43;
+  background: #003041;
   overflow: hidden;
   display: block;
   -webkit-font-smoothing: antialiased;
