new look of the home page

--- a/src/components/Blogs/TemplateBlog.scss
+++ b/src/components/Blogs/TemplateBlog.scss
@@ -7,37 +7,43 @@
         transform: translateY(-50%);
         width: 40%;
         max-height: 90%;
-    }
 
-    h1 {
-        color: #ED6165;
-        font-size: 56px;
-        line-height: 53px;
-        margin: 0;
-        font-family: 'Coolvetica';
-        font-weight: 400;
-
-        &:before {
-            content: '<h1>';
-            font-family: 'La Belle Aurore', cursive;
+        h1 {
             color: #ED6165;
-            font-size: 18px;
-            position: absolute;
-            margin-top: -30px;
-            left: -15px;
-            opacity: 0.6;
+            font-size: 56px;
+            line-height: 53px;
+            margin: 0;
+            font-family: 'Coolvetica';
+            font-weight: 400;
+    
+            &:before {
+                content: '<h1>';
+                font-family: 'La Belle Aurore', cursive;
+                color: #ED6165;
+                font-size: 18px;
+                position: absolute;
+                margin-top: -30px;
+                left: -15px;
+                opacity: 0.6;
+            }
+    
+            &:after {
+                content: '<h1/>';
+                font-family: 'La Belle Aurore', cursive;
+                color: #ED6165;
+                font-size: 18px;
+                position: absolute;
+                margin-top: 18px;
+                margin-left: 20px;
+                animation: fadeIn 1s 2.8s backwards;
+                opacity: 0.6;
+            }
         }
 
-        &:after {
-            content: '<h1/>';
-            font-family: 'La Belle Aurore', cursive;
-            color: #ED6165;
-            font-size: 18px;
-            position: absolute;
-            margin-top: 18px;
-            margin-left: 20px;
-            animation: fadeIn 1s 2.8s backwards;
-            opacity: 0.6;
+        p {
+            color: #fff;
         }
     }
+
+    
 }
