--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -10,7 +10,7 @@
     }
 
     h1 {
-        color: #ED6165;
+        color: var(--primary);
         font-size: 56px;
         line-height: 53px;
         margin: 0;
@@ -20,7 +20,7 @@
         &:before {
             content: '<h1>';
             font-family: 'La Belle Aurore', cursive;
-            color: #ED6165;
+            color: var(--primary);
             font-size: 18px;
             position: absolute;
             margin-top: -40px;
@@ -31,7 +31,7 @@
         &:after {
             content: '<h1/>';
             font-family: 'La Belle Aurore', cursive;
-            color: #ED6165;
+            color: var(--primary);
             font-size: 18px;
             position: absolute;
             margin-top: 18px;
@@ -42,7 +42,7 @@
     }
 
     h2 {
-        color: #8d8d8d;
+        color: var(--textSecondary);
         margin-top: 20px;
         font-weight: 400;
         font-size: 11px;
@@ -52,14 +52,14 @@
     }
 
     .flat-button {
-        color: #ED6165;
+        color: var(--primary);
         font-size: 13px;
         font-weight: 400;
         letter-spacing: 4px;
         font-family: sans-serif;
         text-decoration: none;
         padding: 10px 18px;
-        border: 1px solid #ED6165;
+        border: 1px solid var(--primary);
         margin-top: 25px;
         float: left;
         // animation: fadeIn 0.1s 0.1s backwards;
@@ -67,7 +67,7 @@
 
         &:hover {
             animation: rubberBand 1s;
-            background: #ED6165;
+            background: var(--primary);
             color: #333;
         }
     }
@@ -87,7 +87,7 @@
     .h-shape{
         width: 100%;
         height: 100%;
-        background-color: #ED6165;
+        background-color: var(--primary);
         position: absolute;
         left: auto;
         top: auto;
