--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -1,10 +1,10 @@
 .home-page {
-
+    
     .text-zone {
         position: absolute;
         left: 10%;
-        top: 30%;
-        transform: translateY(-30%);
+        top: 50%;
+        transform: translateY(-50%);
         width: 40%;
         max-height: 90%;
     }
@@ -78,9 +78,9 @@
     width: 450px;
     height: 450px;
     position: absolute;
-    top: 45%;
+    top: 50%;
     right: 10%;
-    transform: translateY(-45%);
+    transform: translateY(-50%);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -183,33 +183,25 @@
 }
 
 @keyframes float {
-
-    0%,
-    100% {
-        transform: translateY(-45%) translateX(0) translateY(0);
+    0%, 100% {
+        transform: translateY(-50%) translateX(0) translateY(0);
     }
-
     25% {
-        transform: translateY(-45%) translateX(-15px) translateY(-15px);
+        transform: translateY(-50%) translateX(-15px) translateY(-15px);
     }
-
     50% {
-        transform: translateY(-45%) translateX(0) translateY(-25px);
+        transform: translateY(-50%) translateX(0) translateY(-25px);
     }
-
     75% {
-        transform: translateY(-45%) translateX(15px) translateY(-15px);
+        transform: translateY(-50%) translateX(15px) translateY(-15px);
     }
 }
 
 @keyframes pulse-glow {
-
-    0%,
-    100% {
+    0%, 100% {
         opacity: 0.3;
         transform: scale(1);
     }
-
     50% {
         opacity: 0.6;
         transform: scale(1.15);
@@ -221,22 +213,18 @@
         transform: rotate(0deg) scale(1);
         opacity: 0.7;
     }
-
     25% {
         transform: rotate(90deg) scale(1.05);
         opacity: 0.85;
     }
-
     50% {
         transform: rotate(180deg) scale(1);
         opacity: 0.7;
     }
-
     75% {
         transform: rotate(270deg) scale(1.05);
         opacity: 0.85;
     }
-
     100% {
         transform: rotate(360deg) scale(1);
         opacity: 0.7;
@@ -244,13 +232,10 @@
 }
 
 @keyframes float-dot {
-
-    0%,
-    100% {
+    0%, 100% {
         transform: translateY(0) scale(1);
         opacity: 0.5;
     }
-
     50% {
         transform: translateY(-25px) scale(1.5);
         opacity: 1;
@@ -258,13 +243,11 @@
 }
 
 @media screen and (max-width: 600px) {
-
     .tags,
     .home-page h1::before,
     .home-page h1::after {
         display: none;
     }
-
     .picture-container {
         position: relative;
         width: 280px;
@@ -289,7 +272,6 @@
             }
         }
     }
-
     .home-page {
         .text-zone {
             position: initial;
@@ -309,13 +291,11 @@
 }
 
 @media screen and (max-width: 1200px) and (min-width: 600px) {
-
     .tags,
     .home-page h1::before,
     .home-page h1::after {
         display: none;
     }
-
     .picture-container {
         position: relative;
         width: 350px;
@@ -331,7 +311,6 @@
             height: 320px;
         }
     }
-
     .home-page {
         .text-zone {
             position: initial;
@@ -349,3 +328,5 @@
         }
     }
 }
+
+
