--- a/src/components/ThemeSwitcher/index.scss
+++ b/src/components/ThemeSwitcher/index.scss
@@ -182,19 +182,22 @@
 }
 
 // Responsive design
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1200px) {
   .theme-switcher {
-    top: 15px;
-    right: 15px;
+    top: auto;
+    bottom: 20px;
+    right: 20px;
 
     .theme-toggle-btn {
-      width: 45px;
-      height: 45px;
-      font-size: 18px;
+      width: 50px;
+      height: 50px;
+      font-size: 20px;
     }
 
     .theme-menu {
-      right: -10px;
+      top: auto;
+      bottom: 70px;
+      right: 0;
       min-width: 260px;
     }
   }
